<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="br.com.mdr.packsburgers.viewmodel.UserDetailViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.ui.UserDetailFragment"
            android:background="@color/colorPrimary">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/AppTheme.MyActionBar"/>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:contentDescription="@string/contentDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/img_background"
                android:alpha="0.18"/>

        <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="129dp"
                android:layout_height="169dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/contentDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBarLayout"
                app:srcCompat="@drawable/app_logo"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin32"
                android:layout_marginEnd="@dimen/margin32"
                android:hint="@string/hint_nome"
                android:textColorHint="@color/colorHint"
                android:nextFocusDown="@id/inputCpf"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLogo">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.user.nome}"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    style="@style/AppTheme.TextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputCpf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cpf"
                android:textColorHint="@color/colorHint"
                app:layout_constraintStart_toStartOf="@id/inputNome"
                app:layout_constraintEnd_toEndOf="@id/inputNome"
                app:layout_constraintTop_toBottomOf="@id/inputNome">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.user.cpf}"
                    android:imeOptions="actionNext"
                    android:inputType="text|numberDecimal"
                    android:maxLines="1"
                    style="@style/AppTheme.TextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputRg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_rg"
                android:textColorHint="@color/colorHint"
                app:layout_constraintStart_toStartOf="@id/inputNome"
                app:layout_constraintEnd_toEndOf="@id/inputNome"
                app:layout_constraintTop_toBottomOf="@id/inputCpf">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.user.rg}"
                    android:imeOptions="actionNext"
                    android:inputType="text|numberDecimal"
                    android:maxLines="1"
                    style="@style/AppTheme.TextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDataNasc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_data_nasc"
                android:textColorHint="@color/colorHint"
                app:layout_constraintStart_toStartOf="@id/inputNome"
                app:layout_constraintEnd_toEndOf="@id/inputNome"
                app:layout_constraintTop_toBottomOf="@id/inputRg">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDataNasc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.user.dataNasc}"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:maxLines="1"
                    style="@style/AppTheme.TextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                app:rippleColor="@color/colorHint"
                android:text="@string/hint_salvar"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@id/inputDataNasc"
                app:layout_constraintEnd_toEndOf="@id/inputDataNasc"
                app:layout_constraintTop_toBottomOf="@id/inputDataNasc"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>