<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="isLoading" type="Boolean"/>
        <import type="android.view.View"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/margin16"
            android:paddingStart="@dimen/margin16"
            android:paddingEnd="@dimen/margin16"
            android:background="@color/colorPrimary"
            tools:context=".view.ui.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appBarLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.appbar.CollapsingToolbarLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <androidx.appcompat.widget.Toolbar
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:layout_collapseMode="parallax"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >
                        <ImageView
                                android:id="@+id/imgLogo"
                                android:layout_width="129dp"
                                android:layout_height="169dp"
                                android:scaleType="fitCenter"
                                android:layout_marginTop="@dimen/margin16"
                                android:contentDescription="@string/contentDescription"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/app_logo"/>

                        <TextView
                                android:id="@+id/txtDescFinished"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pedidos_finalizados"
                                android:textColor="@android:color/white"
                                android:textAlignment="center"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/txtDescAgended"
                                app:layout_constraintTop_toBottomOf="@id/imgLogo"/>

                        <TextView
                                android:id="@+id/txtDescAgended"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pedidos_agendados"
                                android:textColor="@android:color/white"
                                android:textAlignment="center"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@id/txtDescFinished"
                                app:layout_constraintTop_toBottomOf="@id/imgLogo"/>

                        <TextView
                                android:id="@+id/txtFinished"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin8"
                                android:text="16"
                                android:textColor="@android:color/white"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="@id/txtDescFinished"
                                app:layout_constraintEnd_toEndOf="@id/txtDescFinished"
                                app:layout_constraintTop_toBottomOf="@id/txtDescFinished"/>

                        <TextView
                                android:id="@+id/txtAgended"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin8"
                                android:text="27"
                                android:textColor="@android:color/white"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                app:layout_constraintEnd_toEndOf="@id/txtDescAgended"
                                app:layout_constraintStart_toStartOf="@id/txtDescAgended"
                                app:layout_constraintTop_toBottomOf="@id/txtDescAgended"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>
            <ImageView
                    android:id="@+id/imgBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/contentDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:srcCompat="@drawable/img_background"
                    android:alpha="0.18"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutPager"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/margin16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appBarLayout"
                    app:layout_constraintBottom_toBottomOf="parent">

                <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        app:tabMode="scrollable"
                        app:tabGravity="fill"
                        app:tabTextColor="@android:color/white"
                        app:tabIndicatorColor="@android:color/white"
                        app:tabIndicatorHeight="5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="@{isLoading ? View.GONE : View.VISIBLE}"
                        app:layout_scrollFlags="scroll|enterAlways|snap"/>

                <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tabLayout"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:visibility="@{isLoading ? View.GONE : View.VISIBLE}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
